--- a/_posts/2017-03-06-openblog.md
+++ b/_posts/2017-03-06-openblog.md
@@ -11,7 +11,7 @@ publish: true
 내부기술성장을 위해 이래저래 열심히 하고 있지만, 이제서야 발판인 블로그를 오픈하게 됬네요.
 본 글에서는 github.io로 이전하게 된 계기와 여러가지 잡담 및 포스팅 방향에 대해 서술합니다.
 
-### 블로그 오픈해보자
+# 블로그 오픈해보자
 사실 저는 개인 블로그 운영기간은 매우 길었습니다. 2012년에서 14년도까지는 네이버 블로그,
 그 이후에는 [Tistory 블로그][pupu-blog], 마지막으로 최근 [github 블로그][pupu-github]까지 매우 다양한 플랫폼을 이용해 보았습니다.
 Wordpress기반으로 회사 블로그를 만들었다가 한달만에 빠르게 삭제한 경험도 있구요.
@@ -43,16 +43,17 @@ Wordpress기반으로 회사 블로그를 만들었다가 한달만에 빠르게
 - 0-Day 분석 글, 국내외 보안 통계 등 등 ..
 - IT관련 모든 기술(빅데이터, 머신러닝, 딥러닝, AI...)
 대부분의 기술적 주제를 다룬다고 생각하시면 될 것 같아요.
-
+<img src="http://mkgk888.cafe24.com/i2sec1.jpg">
 
 ## 마무리
 
 [i2sec][i2sec]블로그는 이제 시작합니다.
 주변에 관심있는 분들이 많은 만큼, 조언도 많이 해주시고 칭찬도 많이 해주시면 좋겠습니다.
 좋은 정보를 알리고, 공유에 앞장서는 i2sec 해킹팀이 되겠습니다.
+<ninja>
 감사합니다.
 
-
+[ninja]: https://i2sec.github.io/images/logo.png
 [i2sec]: http://i2sec.co.kr
 [pupu-blog]: http://hackpupu.tistory.com
 [pupu-github]: https://hackpupu.github.io
